[package]
name = "spl-stake-single-pool"
version = "0.7.0"
description = "Solana Program Library Single-Stake Pool"
authors = ["Solana Labs Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
arrayref = "0.3.6"
borsh = "0.9"
mpl-token-metadata =  { version = "1.7.0", features = [ "no-entrypoint" ] }
num-derive = "0.3"
num-traits = "0.2"
num_enum = "0.5.9"
serde = "1.0.130"
serde_derive = "1.0.103"
solana-program = "1.14.12"
spl-token = { version = "3.5", path = "../../token/program", features = [ "no-entrypoint" ] }
spl-associated-token-account = { version = "1.1", path = "../../associated-token-account/program", features = [ "no-entrypoint" ] }
thiserror = "1.0"
bincode = "1.3.1"

[dev-dependencies]
proptest = "1.0"
solana-program-test = "1.14.12"
solana-sdk = "1.14.12"
solana-vote-program = "1.14.12"
test-case = "2.2"

[lib]
crate-type = ["cdylib", "lib"]
