[package]
name = "spl-stake-pool-test"
version = "0.1.0"
description = "Solana Program Library Stake Pool Integration Tests"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana-program-library"
license = "Apache-2.0"
edition = "2021"

[features]
test-sbf = []

[build-dependencies]
walkdir = "2"

[dev-dependencies]
arrayref = "0.3.6"
borsh = "0.9"
mpl-token-metadata =  { version = "1.3.1", features = [ "no-entrypoint" ] }
num-derive = "0.3"
num-traits = "0.2"
num_enum = "0.5.4"
serde = "1.0.130"
serde_derive = "1.0.103"
solana-program = "1.14.10"
spl-math = { version = "0.1", path = "../../libraries/math", features = [ "no-entrypoint" ] }
spl-token-2022 = { version = "0.5", path = "../../token/program-2022", features = [ "no-entrypoint" ] }
thiserror = "1.0"
bincode = "1.3.1"
proptest = "1.0"
solana-program-test = "1.14.10"
solana-sdk = "1.14.10"
solana-vote-program = "1.14.10"
spl-token = { version = "3.5", path = "../../token/program", features = [ "no-entrypoint" ] }
spl-stake-pool = { version = "0.7", path = "../program", features = [ "no-entrypoint" ] }
spl-stake-birdbath = { version = "0.7", path = "../birdbath", features = [ "no-entrypoint" ] }
spl-associated-token-account = { version = "1.1", path = "../../associated-token-account/program", features = [ "no-entrypoint" ] }
test-case = "2.2"
